# recipes

./: .gitlab-ci.yml  Cargo.toml  LICENSE  README.md  recipes.service
migrations/2020-08-10-092056_create_recipes/: down.sql  up.sql
migrations/2020-08-10-092056_create_rezepte/: down.sql  up.sql
migrations/2020-08-14-091623_create_user/: up.sql
migrations/2020-08-20-185310_create_categories/: up.sql
src/: auth.rs  database.rs  lib.rs  main.rs  model.rs  request_handler.rs  schema.rs
src/common/: controller.rs  mod.rs  repository.rs  schema.rs
src/controller/: category.rs  common.rs  config.rs  login.rs  mod.rs  recipe.rs  user.rs
src/domain/: category.rs  mod.rs  recipe.rs  user.rs
src/recipe/: controller.rs  mod.rs  model.rs  repository.rs
src/repository/: category.rs  mod.rs  recipe.rs  schema.rs  user.rs
src/user/: controller.rs  model.rs  repository.rs
templates/: config.html.hbs  header.html.hbs  hello.html.hbs  index.html.hbs  login.html.hbs  new_recipe.html.hbs  recipe.html.hbs  recipe_list.html.hbs  update_category.html.hbs  update_recipe.html.hbs  update_user.html.hbs
templates/layout/: base.html.hbs
tests/: category_integration.rs  config_integration.rs  login_integration.rs  recipe_integration.rs  recipes_integration.rs  user_integration.rs
tests/common/: mod.rs
