[package]
name = "recipes-tool"
version = "0.1.0"
authors = ["Kay Hannay <klinux@hannay.de>"]

[dependencies]
rocket = "0.4.5"
rocket_codegen = "0.4.5"
rocket_contrib = { version = "0.4.5", features = ["handlebars_templates", "diesel_mysql_pool"] }
serde = "1.0.114"
serde_derive = "1.0.114"
serde_json = "1.0.57"
chrono = { version = "0.4.13", features = ["serde"] }
diesel = { version = "1.4.5", features = ["mysql", "chrono", "numeric"] }
diesel_migrations = { version = "1.4.0" }
bigdecimal = { version = "*", features = ["serde"] }
dotenv = "0.15.0"

[dev-dependencies]
testcontainers = "0.9.1"
